[package]
build = "build.rs"
name = "fantasm"
version = "0.8.0"
authors = ["Guy Black <captainblack@zx-spectrum.org.uk>"]
edition = "2018"

[dependencies]
evalexpr = "5"
#chrono = "0.4.9"
argparse = "0.2.2"
colour = "0.3.0"
regex = "1"
lazy_static = "1.3.0"
version = "3.0.0"
rand = "0.7.0"

[build-dependencies]
chrono = "0.4.9"

[profile.release]
opt-level = 3       # Optimize for speed.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
